Fixed Window (control) buttons overflowing to web view area

--- a/userChrome.css
+++ b/userChrome.css
@@ -14,7 +14,9 @@
     visibility: collapse !important;
 } 
 */
-
+hbox.titlebar-buttonbox {
+  height: 22px;
+}
 .tabbrowser-tab {
   visibility: collapse;
 }
@@ -22,7 +24,7 @@
   height: 27px !important;
 }
 #nav-bar {
-  margin-top: -51px;
+  margin-top: -50.5px;
   margin-right: 140px;
   box-shadow: none !important;
 }
